[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.2"
cbc = { version = "0.1.2", features = ["std"] }
dotenv = "0.15.0"
php_serde = "0.6.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
urlencoding = "2.1.2"
